--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vanderbilt First-Year Survey (Class of 2029)</title>
+  <title>Vandy Frosh Survey 2029</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Load Plotly for charts -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-  <h1>🎓 Vanderbilt First-Year Survey (Class of 2029)</h1>
-  <p>Interactive results from our first-year student survey, conducted by <em>The Hustler</em>.</p>
-
-  <!-- Chart containers -->
-  <div id="chart-state" class="chart"></div>
-  <div id="chart-gender" class="chart"></div>
-  <div id="chart-race" class="chart"></div>
-
+  <h1>Vanderbilt First-Year Survey Results</h1>
+  <div id="charts">
+    <div class="chart" id="chart1"></div>
+    <div class="chart" id="chart2"></div>
+    <div class="chart" id="chart3"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
